# e2e-agent-patterns

./: .gitignore  Dockerfile  GEMINI.md  README.md  activate.sh  gunicorn.conf.py  main.tf  pyproject.toml  variables.tf
.cloudbuild/: cloudbuild-django.yaml
.github/workflows/: deploy.yml  security-pii-review.yml
adk_bug_ticket_agent/: __init__.py  agent.py  agent_executor.py  system_prompt.py  views.py
adk_bug_ticket_agent/tools/: tools.py
extensions/agent-farm/: GEMINI.md  README.md  gemini-extension.json
extensions/agent-farm/agents/: engineer.md  librarian.md  platform.md  pm.md  qa.md  reviewer.md  tpm.md  triager.md
extensions/agent-farm/commands/farm/: status.toml
extensions/agent-farm/skills/create-pr/: SKILL.md
extensions/agent-farm/skills/spec/: SKILL.md
extensions/agent-farm/skills/update-issue/: SKILL.md
mcp-servers/mcp-toolbox/: tools.yaml
plans/: GITHUB_AUTH_RESOLUTION.md  OWASP_TOP_10_SCANNING.md  QUALITY_GATES_HITL.md
web/: settings.py  urls.py
