[project]
name = "adk-agent"
version = "1.17.0"
description = "ADK Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.27.4",
    "a2a-sdk>=0.3.22",
    "python-dotenv==1.2.2",
    "toolbox-core==0.5.2",
    "gunicorn",
    "whitenoise[brotli]",
    "django>=5.0,<5.3",
    "google-generativeai>=0.8.5",
    "psycopg2-binary",
    "litellm>=1.81.4",
]
